# aoc25

./: .gitignore  Cargo.toml
src/: aocclient.rs  autosubmit.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  main.rs  solver.rs
src/aocclient/: tests.rs
