[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[dependencies]
aho-corasick = "1.1.4"
array2d = "0.3.2"
clap = { version = "4.5.53", features = ["derive"] }
http = "1.4.0"
intervallum = "1.4.4"
itertools = "0.14.0"
log = "0.4.28"
pretty_env_logger = "0.5.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "cookies"] }
serde = "1.0.228"
toml = "0.9.8"
z3 = "0.19.5"

[dev-dependencies]
httptest = "0.16.3"
test-log = "0.2.19"
